Add my own exercism-mode for Exercism.io

--- a/config.org
+++ b/config.org
@@ -1030,6 +1030,17 @@ Just ~(add-hook! /programming-mode-hook/ #'aggressive-indent-mode)~ to activate.
 #+BEGIN_SRC emacs-lisp
 (after! prog-mode (use-package! lisp-extra-font-lock))
 #+END_SRC
+** Exercism.io
+*** Package
+#+begin_src emacs-lisp :tangle packages.el
+(package! exercism-mode :recipe (:host github :repo "timotheosh/exercism-mode"))
+#+end_src
+*** Config
+#+begin_src emacs-lisp
+(after! projectile
+  (use-package! exercism-mode)
+  (add-hook! 'prog-mode #'exercism-mode))
+#+end_src
 ** Clojure
 #+BEGIN_SRC emacs-lisp
 (add-hook! 'clojure-mode-hook
