--- a/config.org
+++ b/config.org
@@ -21,12 +21,32 @@ Some functionality uses this to identify you, e.g. GPG configuration, email clie
       github-account-name "timotheosh")
 #+END_SRC
 * Global
+** Disable global smartparens-mode
+Smartparens is awesome, but we don't want it everywhere.
 #+BEGIN_SRC emacs-lisp
 (remove-hook 'doom-first-buffer-hook #'smartparens-global-mode)
 (setq! show-paren-mode 1
        doom-scratch-initial-major-mode t)
 (setq! auth-sources '("~/.authinfo.gpg"))
 #+END_SRC
+** Long lines
+*** Bidirectional Editing
+Disable bidirectional editing. NOTE: You'll need to change this if you decide to write someing in Hebrew or Chinese.
+#+begin_src emacs-lisp
+(setq-default bidi-paragraph-direction 'left-to-right)
+#+end_src
+*** Bidirectional parenthesis
+Same applies from Bidirectional Editing above.
+#+begin_src emacs-lisp
+(if (version<= "27.1" emacs-version)
+    (setq bidi-inhibit-bpa t))
+#+end_src
+*** So-long mode
+Disable this and use ~find-file-literally~ instead, if you don't want this globally.
+#+begin_src emacs-lisp
+;;(if (version<= "27.1" emacs-version)
+;;    (global-so-long-mode 1))
+#+end_src
 * Appearance
 ** Fonts
 Doom exposes five (optional) variables for controlling fonts in Doom. Here are the three important ones:
@@ -163,7 +183,7 @@ These are some convenience functions for programs I run often.
     system-type))
 (setq! system-distro (system-distribution))
 
-(defun multi-term-program (program)
+(defun trh/run-term-program (program)
   "Make a multi-term buffer running program."
   (let ((multi-term-program program))
     (multi-term)))
@@ -171,12 +191,12 @@ These are some convenience functions for programs I run often.
 (defun aptitude ()
   "Run Aptitude"
   (interactive)
-  (multi-term-program "aptitude"))
+  (trh/run-term-program "aptitude"))
 
 (defun htop ()
   "Run Htop"
   (interactive)
-  (multi-term-program "htop"))
+  (trh/run-term-program "htop"))
 
 (defun neofetch ()
   (interactive)
