--- a/config.org
+++ b/config.org
@@ -66,18 +66,12 @@ only need these two:
 #+END_SRC
 *** Config
 #+BEGIN_SRC emacs-lisp
-(use-package! mixed-pitch
-  :config
-  (setq! mixed-pitched-variable-pitch-cursor 'bar))
+(setq! mixed-pitched-variable-pitch-cursor 'bar)
 #+END_SRC
 ** Olivetti Mode
 *** Package
 #+BEGIN_SRC emacs-lisp :tangle packages.el
 (package! olivetti)
-#+END_SRC
-*** Config
-#+BEGIN_SRC emacs-lisp
-(use-package! olivetti)
 #+END_SRC
 ** Theme
 There are two ways to load a theme. Both assume the theme is installed and available. You can either set ~doom-theme~ or manually load a theme with the ~load-theme~ function. This is the default:
@@ -124,25 +118,16 @@ This determines the style of line numbers in effect. If set to `nil', line numbe
 ** Swiper
 Better isearch replacement
 #+BEGIN_SRC emacs-lisp :tangle packages.el
-(package! swiper)
+(package! swiper :recipe (:host github :repo "abo-abo/swiper") :pin "7c5d49f") ;; commit date: 2021/05/18
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
 (map! "C-s" #'swiper)
 #+END_SRC
-** Smex
-Useful for showing recent choices.
-#+BEGIN_SRC emacs-list :tangle packages.el
-(package! smex)
-#+END_SRC
-#+BEGIN_SRC emacs-lisp
-(use-package! smex
-  :init
-  (smex-initialize))
-#+END_SRC
 ** [[https://github.com/lastquestion/explain-pause-mode][explain-pause-mode]]
 explain-pause-mode is very lightweight; you can leave it running all the time. You can check the buffer ~*explain-pause-log*~ to see what was slow and the information gathered.
 #+BEGIN_SRC emacs-lisp :tangle packages.el
-(package! explain-pause-mode :recipe (:host github :repo "lastquestion/explain-pause-mode"))
+(package! explain-pause-mode :recipe
+  (:host github :repo "lastquestion/explain-pause-mode") :pin "2356c8c") ;; commit date 2020/07/27
 #+END_SRC
 #+BEGIN_SRC emacs-lisp
 ;;(explain-pause-mode t)
@@ -150,11 +135,17 @@ explain-pause-mode is very lightweight; you can leave it running all the time. Y
 ** Spell-fu
 *** Install
 #+begin_src emacs-lisp :tangle packages.el
-(package! spell-fu)
+(package! spell-fu :recipe
+  (:host gitlab :repo "ideasman42/emacs-spell-fu")
+  :pin "fae15427") ; Commit date 2021/04/14
 #+end_src
 *** Config
 #+begin_src emacs-lisp
-(use-package! spell-fu)
+(after! org-mode
+  (add-hook 'org-mode-hook
+            (lambda ()
+              (setq spell-fu-faces-exclude '(org-meta-line org-link org-code))
+              (spell-fu-mode))))
 #+end_src
 * Additional Macros
 Here are some additional functions/macros that could help you configure Doom:
@@ -188,24 +179,27 @@ These are some convenience functions for programs I run often.
     system-type))
 (setq! system-distro (system-distribution))
 
-(defun trh/run-term-program (program)
-  "Make a multi-term buffer running program."
-  (let ((multi-term-program program))
-    (multi-term)))
+(use-package! multi-term
+  :config
+  ;; These have functions only work, once we have loaded multi-term
+  (defun trh/run-term-program (program)
+    "Make a multi-term buffer running program."
+    (let ((multi-term-program program))
+      (multi-term)))
 
-(defun aptitude ()
-  "Run Aptitude"
-  (interactive)
-  (trh/run-term-program "aptitude"))
+  (defun aptitude ()
+    "Run Aptitude"
+    (interactive)
+    (trh/run-term-program "aptitude"))
 
-(defun htop ()
-  "Run Htop"
-  (interactive)
-  (trh/run-term-program "htop"))
+  (defun htop ()
+    "Run Htop"
+    (interactive)
+    (trh/run-term-program "htop"))
 
-(defun neofetch ()
-  (interactive)
-  (ansi-term "neofetch"))
+  (defun neofetch ()
+    (interactive)
+    (ansi-term "neofetch")))
 #+END_SRC
 ** Disable line numbers function
 #+BEGIN_SRC emacs-lisp
@@ -229,7 +223,6 @@ These are some convenience functions for programs I run often.
 * Run program
 This is for running arbitrary programs I don't run often.
 #+BEGIN_SRC emacs-lisp
-(use-package! dired)
 (defun run-program (input)
   (interactive
    (list (read-shell-command "run command: ")))
